<resources>
    <string name="app_name">Tamantic</string>
    <string name="title">Tamantic</string>
    <string name="introduction_1">Start Planting</string>
    <string name="introduction_2">Elevate Your Greenery with Innovative Health Monitoring\nGrow with Us!</string>
    <string name="introduction_button">Get Started</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="text_email">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have account? </string>
    <string name="register">Register</string>
    <string name="create_new_account">Create New Account</string>
    <string name="register_2">Fill your details or continue with social media</string>
    <string name="full_name">Full Name</string>
    <string name="you_have_account">You have account?</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_profile">Mbah Ntis</string>
    <string name="my_profile">My Profile</string>
    <string name="messages">Messages</string>
    <string name="location">Location</string>
    <string name="login_success">Berhasil mari mencari tanaman kesukaan mu!</string>
    <string name="register_success">Do you want to proceed?</string>
    <string name="settings">Settings</string>
    <string name="slogan">Cari <b>Tanaman</b> terbaik\nuntuk <b>Hiasan</b> lebih menarik</string>
    <string name="cari_tanaman">Cari Tanaman</string>
    <string name="title_product">Title_product</string>
    <string name="price">price</string>
    <string name="cart">cart</string>
    <string name="name_chat">name</string>
    <string name="message_chat">message...</string>
    <string name="name_chat_detail">Tukang Bamboo</string>
    <string name="message_chat_detail">Lorem ipsum dolor sit amet</string>
    <string name="title_myplant">Nama Tanaman</string>
    <string name="tambahkan">Tambahkan ke Keranjang</string>
    <string name="default_web_client_id">585485533950-qse1oua91iohgp17f78rijdegsn5dbf8.apps.googleusercontent.com</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="desc_image_scan">desc_image_scan</string>
    <string name="desc_action_to_edit">desc_action_to_edit</string>
    <string name="ketikan_sesuatu_untuk_deskripsi">Ketikan sesuatu untuk deskripsi</string>
    <string name="desc_action_send">desc_action_send</string>
    <string name="pesanan_mu">Pesanan mu</string>
    <string name="_0_pesanan">0 pesanan</string>
    <string name="tambah_lainya">Tambah lainya</string>
    <string name="total_harga">Total harga</string>
    <string name="rp_450_000">Rp 450.000</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="kamu_sedang_mencari">Kamu sedang mencari</string>
    <string name="tanaman_indoor">Tanaman Indoor</string>
    <string name="tanaman_indor">tanaman_indor</string>
    <string name="desc_image_chatlog">desc_image_chatlog</string>
    <string name="ketikan_sesuatu">Ketikan sesuatu</string>
    <string name="dexc_action_send">dexc_action_send</string>
    <string name="desc_image_detail_myplant">desc_image_detail_myplant</string>
    <string name="kamboja">Kamboja</string>
    <string name="tumbuhan_yang_berasal_dari_amerika_tengah_nama_plumeria_diberikan_untuk_menghormati_charles_plumier_1646_1706_pakar_botani_asal_prancis">Tumbuhan yang berasal dari Amerika Tengah. Nama Plumeria diberikan untuk menghormati Charles Plumier (1646-1706), pakar botani asal Prancis.</string>
    <string name="kesehatan_tanamanmu">Kesehatan Tanamanmu</string>
    <string name="_51">51%</string>
    <string name="sedikit_kekurangan_panas_matahari">Sedikit kekurangan panas matahari</string>
    <string name="desc_sun">desc_sun</string>
    <string name="desc_pupuk">desc_pupuk</string>
    <string name="_70">70%</string>
    <string name="perlu_diganti_pupuk_baru">Perlu diganti pupuk baru</string>
    <string name="_90">90%</string>
    <string name="sangat_perlu_untuk_disiram_air_sekarang_juga">Sangat Perlu untuk disiram air sekarang juga</string>
    <string name="desc_water">desc_water</string>
    <string name="_30">30%</string>
    <string name="hanya_sedikit_perlu_pemotongan">Hanya sedikit perlu pemotongan</string>
    <string name="desc_potong">desc_potong</string>
    <string name="desc_action_to_back">desc_action_to_back</string>
    <string name="product_name_here">Product Name Here</string>
    <string name="rp_100_000">Rp 100,000</string>
    <string name="lokasi">Lokasi</string>
    <string name="lorem_ipsum_description">Lorem Ipsum Description</string>
    <string name="desc_image_scann">desc_image_scann</string>
    <string name="tesc_action_to_editt">Tesc_action_to_editt</string>
    <string name="ambil_gambar_dari_gallery">Ambil gambar dari Gallery</string>
    <string name="ambil_dari_gallery">Ambil dari Gallery</string>
    <string name="scan_gambar">Scan Gambar</string>
    <string name="desc_action_to_gallery">desc_action_to_gallery</string>
    <string name="desc_introduction_images">desc_introduction_images</string>
    <string name="login_with_google">Login with Google</string>
    <string name="desc_logo_tamantic">desc_logo_tamantic</string>
    <string name="desc_logo_tamanticc">desc_logo_tamantic</string>
    <string name="login_with_googlee">Login with Google</string>
    <string name="desc_scan_image">desc_scan_image</string>
    <string name="home">Home</string>
    <string name="plant">Plant</string>
    <string name="chat">Chat</string>
    <string name="plantt">Plant</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_user">Select User</string>
    <string name="kamboja_market">Kamboja Market</string>
    <string name="jl_jatake_jatuwung_tangerang_indonesia">Jl Jatake jatuwung tangerang, Indonesia</string>
    <string name="rp_150_000">Rp 150.000</string>
    <string name="_5_0">5.0</string>
    <string name="_7_terjual">7 terjual</string>
    <string name="produk_lainya">Produk Lainya</string>
    <string name="desc_action_to_select_user">desc_action_to_select_user</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="hias">Hias</string>
    <string name="bunga">Bunga</string>
    <string name="pohon">Pohon</string>
    <string name="pot">Pot</string>
    <string name="media">Media</string>
    <string name="alat">Alat</string>
    <string name="best_product">Best Product</string>
    <string name="desc_alat">desc_alat</string>
    <string name="desc_media">desc_media</string>
    <string name="desc_pot">desc_pot</string>
    <string name="desc_pohon">desc_pohon</string>
    <string name="desc_bunga">desc_bunga</string>
    <string name="desc_his">desc_his</string>
    <string name="desc_outdor">desc_outdor</string>
    <string name="desc_indoor">desc_indoor</string>
    <string name="tanaman_saya">Tanaman Saya</string>
    <string name="desc_scan_new_plant">desc_scan_new_plant</string>
    <string name="perlu_di_siram_hari_ini">perlu di siram hari ini</string>
    <string name="desc_next">desc_next</string>
    <string name="tanaman_lainya">Tanaman lainya</string>
    <string name="my_profile_list">My Profile</string>
    <string name="desc_my_profiles">desc_my_profiles</string>
    <string name="plus">action_to_plus</string>
    <string name="minus">action_to_minus</string>
    <string name="x2">x2</string>
    <string name="desc_bakcground_toko">desc_bakcground_toko</string>
    <string name="tanaman_Outdoor">Alat Tanaman</string>
    <string name="tanaman_alat">Alat Tanaman</string>
    <string name="tanaman_bunga">Tanaman Bunga</string>
    <string name="tanaman_hias">Tanaman Hias</string>
    <string name="media_tanam">Media Tanam</string>
    <string name="tanaman_outdoor">Tanaman Outdoor</string>
    <string name="tanaman_pohon">Tanaman Pohon</string>
    <string name="potted_and_pollybag"><![CDATA[Potted & PollyBag]]></string>
    <string name="alamat_saya">Alamat Saya</string>
    <string name="profile">Profile</string>
    <string name="pilih_pengguna">Pilih pengguna</string>
    <string name="maps">Maps</string>
    <string name="tambah_alamat">Tambah Alamat</string>
    <string name="desc_icon_address">desc_icon_address</string>
    <string name="alamat">Alamat</string>
    <string name="desc_delete">desc_delete</string>
    <string name="pilih_alamat">Pilih Alamat</string>
    <string name="rp_0_0">Rp.0,0</string>
    <string name="nama_pengguna">nama pengguna</string>
    <string name="_14_44">14:44</string>
    <string name="scan_penyakit">Scan Penyakit</string>
    <string name="hasil_scan">Hasil Scan</string>
    <string name="penjelasan">Penjelasan</string>
    <string name="desc_image_explain">desc_image_explain</string>
    <string name="lorem10">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="desc_action_save">desc_action_save</string>
    <string name="nama_penyakit">Nama penyakit</string>
    <string name="no_message">No Message Yet</string>
    <string name="no_address">No Address Yet</string>
    <string name="no_product">No Product Yet</string>
</resources>