<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:layout_marginRight="5dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/SCREEN_CARD"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_product"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:contentDescription="@string/desc_scan_image"
            android:scaleType="centerCrop"
            android:src="@color/green" />

        <TextView
            style="@style/TEXT"
            android:id="@+id/title_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/title_product"
            android:textSize="14sp" />

        <TextView
            style="@style/TEXT"
            android:id="@+id/market_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:fontFamily="@font/poppins_reguler"
            android:paddingHorizontal="10dp"
            android:text="@string/kamboja_market"
            android:textSize="11sp"
            app:drawableStartCompat="@drawable/ic_market" />

        <TextView
            style="@style/TEXT"
            android:id="@+id/harga_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:fontFamily="@font/poppins_reguler"
            android:layout_marginBottom="5dp"
            android:paddingHorizontal="10dp"
            android:text="@string/price"
            android:textSize="11sp"
            app:drawableStartCompat="@drawable/ic_money" />


    </LinearLayout>
</androidx.cardview.widget.CardView>