<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/SCREEN_CARD"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_myplant"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/desc_image_detail_myplant"
            android:scaleType="centerCrop"
            android:src="@drawable/product_4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TEXT"
                android:id="@+id/title_myplant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:paddingHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:text="@string/title_myplant"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_next"
                android:src="@drawable/ic_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="20dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>