<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="2dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SCREEN_CARD"
        android:layout_gravity="bottom">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_chat"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/desc_image_chatlog"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/CircularImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <LinearLayout
            android:id="@+id/container_chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            app:layout_constraintStart_toEndOf="@id/image_chat"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <TextView
                style="@style/TEXT"
                android:id="@+id/name_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:layout_gravity="center"
                android:text="@string/name_chat"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/message_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/message_chat"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/message_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="14:44"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>